# sentiment-analysis-on-tickets-

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
data/: reference_tickets.jsonl
tests/: test_api.py  test_preprocessing.py  test_service.py  test_vercel_entrypoint.py
ticket_sentiment/: __init__.py  api.py  cli.py  config.py  lexicon.py  llm.py  models.py  preprocessing.py  retrieval.py  scoring.py  service.py  types.py
